# global-state-experiment

./: Cargo.toml  README.md
src/: main.rs
